@@ -35,6 +35,8 @@ Core and Builtins
   when turned into an exception: in this case the exception simply
   gets ignored.
 
+- Issue #9354: Provide getsockopt() in asyncore's file_wrapper.
+
 - In the unicode/str.format(), raise a ValueError when indexes to arguments are
   too large.
 
